Added edit/remove buttons for meetings in psycholog dashboards

--- a/templates/dashboard_psychologist.html
+++ b/templates/dashboard_psychologist.html
@@ -103,6 +103,7 @@
                             <th>Студент</th>
                             <th>Дата</th>
                             <th>Время</th>
+                            <th>Действия</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -111,6 +112,14 @@
                                 <td>{{ meeting.student.get_display_name }}</td>
                                 <td>{{ meeting.date|date:"d.m.Y" }}</td>
                                 <td>{{ meeting.time|date:"H:i" }}</td>
+                                <td>
+                                    <a href="{% url 'edit_meeting' meeting.id %}" class="btn btn-primary btn-sm" style="margin-right: 5px;">
+                                        Редактировать
+                                    </a>
+                                    <a href="{% url 'delete_meeting' meeting.id %}" class="btn btn-danger btn-sm">
+                                        Удалить
+                                    </a>
+                                </td>
                             </tr>
                         {% endfor %}
                     </tbody>
